--- a/charts/one37id-bcagent/Chart.yaml
+++ b/charts/one37id-bcagent/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: one37id-arsagent
+name: one37id-bcagent
 description: A Kubernetes Helm chart for the One37 Business Connector Agent
 annotations:
   category: Infrastructure
@@ -19,4 +19,4 @@ maintainers:
   - name: One37 Solutions, Inc.
     url: https://github.com/one37id/charts
 appVersion: "1.2306.0701"
-version: 0.1.0
+version: 1.2306.0
