--- a/charts/one37id-bcagent/templates/07-ingress.yaml
+++ b/charts/one37id-bcagent/templates/07-ingress.yaml
@@ -22,9 +22,9 @@ metadata:
     {{- include "one37id-bcagent.labels" . | nindent 4 }}
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/affinity: cookie
+    # nginx.ingress.kubernetes.io/affinity: cookie
     nginx.ingress.kubernetes.io/proxy-body-size: 50m
-    nginx.ingress.kubernetes.io/session-cookie-timeout: '36000'
+    # nginx.ingress.kubernetes.io/session-cookie-timeout: '36000'
 
 spec:
   {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
