secret form user files

--- a/charts/one37id-env/values.yaml
+++ b/charts/one37id-env/values.yaml
@@ -1,13 +1,17 @@
-# Default values for one37-mediator.
+# Default values for one37id-env.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 namespace:
-  create: true
-  name: one37
+  create: false
+  name: "one37id"
 
 image:
   # Specifies whether to create a secret for pulling images from a registry.
   createSecret: true
   # Secret name to be used for pulling images from a registry.
   secretName: gitlab-auth
+
+  user: string
+  password: string
+  repohost: string
