--- a/charts/one37id-env/Chart.yaml
+++ b/charts/one37id-env/Chart.yaml
@@ -3,7 +3,7 @@ annotations:
   licenses: Apache-2.0
 apiVersion: v2
 type: application
-name: one37id-env
+name: one37id-platform-setup
 description: The One37id Platform support for deployment of the One37id workloads and services.
 home: https://one37id.com
 icon: https://www.one37id.com/favicon.ico
@@ -18,5 +18,5 @@ keywords:
 maintainers:
   - name: One37 Solutions, Inc.
     url: https://github.com/one37id/charts
-appVersion: "1.2307.2401"
-version: 1.2307.4
+appVersion: "2.2307.2101"
+version: 0.1.0
