--- a/charts/one37id-mediator/templates/serviceaccount.yaml
+++ b/charts/one37id-mediator/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.serviceAccount.name }}
-  namespace: {{ .Values.namespace.name }}
+  name: {{ include "one37id-mediator.serviceAccountName" . }}
   labels:
+    {{- include "one37id-mediator.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
