--- a/charts/one37id-mediator/templates/hpa.yaml
+++ b/charts/one37id-mediator/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ .Values.fullname }}
-  namespace: {{ .Values.namespace.name }}
-  labels: {}
+  name: {{ include "one37id-mediator.fullname" . }}
+  labels:
+    {{- include "one37id-mediator.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ .Values.fullname }}
+    name: {{ include "one37id-mediator.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
