--- a/charts/one37id-mediator/templates/service.yaml
+++ b/charts/one37id-mediator/templates/service.yaml
@@ -2,14 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "one37id-mediator.fullname" . }}
-  namespace: {{ .Values.namespace.name }}
   labels:
     {{- include "one37id-mediator.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: {{ .Values.service.port }}
       protocol: TCP
       name: http
   selector:
