--- a/index.yaml
+++ b/index.yaml
@@ -4,7 +4,7 @@ entries:
     - apiVersion: v2
       name: one37id-bcagent
       type: application
-      description: A Kubernetes Helm chart for the One37 Business Connector Agent
+      description: An All-In-One Kubernetes Helm chart for a dedicated One37 Business Connector Agent deployment
       home: https://one37id.com
       icon: https://www.one37id.com/images/connector.svg
       annotations:
@@ -49,5 +49,25 @@ entries:
         - one37id
         - one37
         - one37id.com
+  one37id-mediator:
+    - apiVersion: v2
+      name: one37id-mediator
+      description: Run the One37ID Aries Mediator
+      icon: "https://pbs.twimg.com/profile_images/1519012545989943297/3ENZiRqF_400x400.jpg"
+      annotations:
+        category: Infrastructure
+        licenses: Apache-2.0
+      home: https://one37id.com
+      keywords:
+        - mediator
+        - ssi
+        - aries
+        - agent
+        - one37id
+        - one37
+        - one37id.com
+      type: application
+      version: 0.1.0
+      appVersion: "1.2308.0301"
 
 generated: "2023-08-10T10:14:31.608107314Z"
