--- a/index.yaml
+++ b/index.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 entries:
-  one37id-bcagent:
+  one37idbcagent:
     - apiVersion: v2
       name: one37id-bcagent
       type: application
@@ -49,7 +49,7 @@ entries:
         - one37id
         - one37
         - one37id.com
-  one37id-mediator:
+  one37idmediator:
     - apiVersion: v2
       name: one37id-mediator
       description: Run the One37ID Aries Mediator
