--- a/charts/one37id-bcagent/Chart.yaml
+++ b/charts/one37id-bcagent/Chart.yaml
@@ -18,11 +18,11 @@ dependencies:
     tags:
     - postgresql
     version: 12.x.x
-  - name: redis
-    repository: oci://registry-1.docker.io/bitnamicharts
-    tags:
-    - redis
-    version: 18.x.x
+  # - name: redis
+  #   repository: oci://registry-1.docker.io/bitnamicharts
+  #   tags:
+  #   - redis
+  #   version: 18.x.x
 keywords:
   - businessconnector
   - ssi
