--- a/charts/one37secrets/templates/repo-secret.yaml
+++ b/charts/one37secrets/templates/repo-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
   .dockerconfigjson: >-
-    eyJhdXRocyI6IHsicmVnaXN0cnkuZ2l0bGFiLmNvbSI6IHsiYXV0aCI6ICJiMjVsTXpjdGNtVmhaRHBwZW00NVFqTktRV2hRWjJkb1RHczNhVVI2TlE9PSJ9fX0=
+    {{ .Values.dockerconfigjson }}
 kind: Secret
 metadata:
   annotations: {}
