--- a/charts/one37secrets/Chart.yaml
+++ b/charts/one37secrets/Chart.yaml
@@ -3,4 +3,4 @@ name: one37secrets
 description: Setup some basic Kubernetes Secrets
 type: application
 version: 1.2309.12
-appVersion: "1.2309.12"
+appVersion: 1.2309.12
