fix internal chart name ref after copy

--- a/charts/one37id-bcagent-oc/templates/02-configmap.yaml
+++ b/charts/one37id-bcagent-oc/templates/02-configmap.yaml
@@ -1,4 +1,4 @@
-{{- $fullName := include "one37id-bcagent.fullname" . -}}
+{{- $fullName := include "one37id-bcagent-oc.fullname" . -}}
 {{- $svcPort := .Values.service.publicPort -}}
 {{- $svcAdminPort := .Values.service.adminPort -}}
 apiVersion: v1
