--- a/charts/one37id-bcagent-oc/templates/02-secret.yaml
+++ b/charts/one37id-bcagent-oc/templates/02-secret.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.secrets.create }}
-{{- $fullName := include "one37id-bcagent.fullname" . -}}
+{{- $fullName := include "one37id-bcagent-oc.fullname" . -}}
 apiVersion: v1
 kind: Secret
 metadata:
