--- a/charts/one37id-bcagent-oc/templates/06-service.yaml
+++ b/charts/one37id-bcagent-oc/templates/06-service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "one37id-bcagent.fullname" . }}
+  name: {{ include "one37id-bcagent-oc.fullname" . }}
   labels:
-    {{- include "one37id-bcagent.labels" . | nindent 4 }}
+    {{- include "one37id-bcagent-oc.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -18,4 +18,4 @@ spec:
       name: http-admin
     {{- end }}
   selector:
-    {{- include "one37id-bcagent.selectorLabels" . | nindent 4 }}
+    {{- include "one37id-bcagent-oc.selectorLabels" . | nindent 4 }}
