--- a/charts/one37id-bcagent-oc/templates/07-ingress.yaml
+++ b/charts/one37id-bcagent-oc/templates/07-ingress.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.ingress.enabled }}
-{{- $fullName := include "one37id-bcagent.fullname" . -}}
+{{- $fullName := include "one37id-bcagent-oc.fullname" . -}}
 {{- $svcPort := .Values.service.publicPort -}}
 {{- $annotate := .Values.ingress.annotations -}}
 {{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
@@ -19,7 +19,7 @@ metadata:
   name: {{ $fullName }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "one37id-bcagent.labels" . | nindent 4 }}
+    {{- include "one37id-bcagent-oc.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
