--- a/charts/one37id-bcagent-oc/Chart.yaml
+++ b/charts/one37id-bcagent-oc/Chart.yaml
@@ -34,5 +34,5 @@ keywords:
 maintainers:
   - name: One37 Solutions, Inc.
     url: https://github.com/one37id/charts
-appVersion: 1.2309.13
+appVersion: "1.2309.13"
 version: 1.2309.13
