invalid char in pvc name

--- a/charts/one37id-ibm-agent-db/templates/04-pvc-workflows.yaml
+++ b/charts/one37id-ibm-agent-db/templates/04-pvc-workflows.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ $fullName}}_{{ .Values.workflowVolume.name }}
+  name: {{ $fullName}}-{{ .Values.workflowVolume.name }}
 spec:
   accessModes:
 {{ toYaml .Values.workflowVolume.accessModes | indent 4 }}
