--- a/charts/one37id-ibm-agent-db/templates/04-pvc-resources.yaml
+++ b/charts/one37id-ibm-agent-db/templates/04-pvc-resources.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ $fullName}}_{{ .Values.resourceVolume.name }}
+  name: {{ $fullName}}-{{ .Values.resourceVolume.name }}
 spec:
   accessModes:
 {{ toYaml .Values.resourceVolume.accessModes | indent 4 }}
