--- a/charts/one37id-ibm-agent-db/Chart.yaml
+++ b/charts/one37id-ibm-agent-db/Chart.yaml
@@ -34,5 +34,5 @@ keywords:
 maintainers:
   - name: One37 Solutions, Inc.
     url: https://github.com/one37id/charts
-appVersion: "1.2310.9"
-version: 1.2310.9
+appVersion: "1.2310.9-1"
+version: 1.2310.9-1
