--- a/charts/one37id-ibm-studio/Chart.yaml
+++ b/charts/one37id-ibm-studio/Chart.yaml
@@ -30,5 +30,5 @@ keywords:
 maintainers:
   - name: One37 Solutions, Inc.
     url: https://github.com/one37id/charts
-appVersion: "2.2310.9"
-version: 2.2310.9
+appVersion: "2.2310.9-1"
+version: 2.2310.9-1
