--- a/charts/one37id-ibm-agent-db/templates/configmap.yaml
+++ b/charts/one37id-ibm-agent-db/templates/configmap.yaml
@@ -1,12 +1,11 @@
 {{- $fullName := include "one37id-ibm-agent-db.fullname" . -}}
-{{- $svcPort := .Values.service.publicPort -}}
-{{- $svcAdminPort := .Values.service.adminPort -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ $fullName }}
 data:
   PG_DBNAME: {{ $fullName }}_agent_db
+  WALLET_PG_DBNAME: {{ $fullName }}_wallet_db
   WORKFLOW_PG_DBNAME: {{ $fullName }}_workflow_db
   AUDIT_PG_DBNAME: {{ $fullName }}_audit_db
 {{- range $key, $value := .Values.configmap }}
