--- a/charts/one37secrets/Chart.yaml
+++ b/charts/one37secrets/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 name: one37secrets
 description: Add Kubernetes Secrets to the One37 GitLab Registry
 type: application
-version: 1.2310.8
-appVersion: 1.2310.8
+version: 1.2310.10-1
+appVersion: 1.2310.10-1
