--- a/charts/one37id-ibm-agent-db/values.yaml
+++ b/charts/one37id-ibm-agent-db/values.yaml
@@ -20,7 +20,9 @@ postgresql:
     enabled: true
     size: 8Gi
 
-one37secrets.nameOverride: "one37id-ibm-agent-db-repo-secret"
+one37secrets:
+  nameOverride: "one37id-ibm-agent-db-one37secrets"
+  fullnameOverride: "one37id-ibm-agent-db-one37secrets"
 
 # Default values for one37 Business Connector.
 # This is a YAML-formatted file.
@@ -142,7 +144,7 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
-imagePullSecrets: [{"name": "one37id-ibm-agent-db-repo-secret"}]
+imagePullSecrets: [{"name": "one37id-ibm-agent-db-one37secrets"}]
 
 extraVolumes:
 extraVolumeMounts:
